[package]
name = "async-socks5"
version = "0.1.0"
authors = ["Adam Wick <awick@uhsure.com>"]
edition = "2018"

[lib]
name = "async_socks5"

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
async-trait = "0.1.50"
futures = "0.3.15"
log = "0.4.8"
quickcheck = "1.0.3"
simplelog = "0.10.0"
thiserror = "1.0.24"