[package]
name = "async-socks5"
version = "0.1.0"
authors = ["Adam Wick <awick@uhsure.com>"]
edition = "2018"

[lib]
name = "async_socks5"

[dependencies]
anyhow = "^1.0.57"
proptest = "^1.0.0"
thiserror = "^1.0.31"
tokio = { version = "^1", features = ["full"] }
tracing = "^0.1.34"

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.3.0"
