[package]
name = "async-socks5"
version = "0.1.0"
authors = ["Adam Wick <awick@uhsure.com>"]
edition = "2018"

[lib]
name = "async_socks5"

[[bin]]
name="socks5-server"
path="server/main.rs"

[dependencies]
anyhow = "^1.0.57"
clap = { version = "^3.1.18", features = ["derive"] }
etcetera = "^0.4.0"
futures = "0.3.21"
if-addrs = "0.7.0"
lazy_static = "1.4.0"
proptest = "^1.0.0"
serde = "^1.0.137"
serde_derive = "^1.0.137"
thiserror = "^1.0.31"
tokio = { version = "^1", features = ["full"] }
toml = "^0.5.9"
tracing = "^0.1.34"
tracing-subscriber = { version = "^0.3.11", features = ["env-filter"] }

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.3.0"
